<resources>
    <string name="app_name">kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="login_page">Login Page</string>
    <string name="profile">Profile</string>
    <string name="message_page">Message Page</string>
    <string name="settings_page">Settings Page</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="view_pager_fragment_1">View Pager Fragment 1</string>
    <string name="view_pager_fragment_2">View Pager Fragment 2</string>
    <string name="view_pager_fragment_3">View Pager Fragment 3</string>
</resources>