<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerHome"
            android:title="@string/home_page"
            />
        <item
            android:id="@+id/drawerMessage"
            android:title="@string/message_page"
            />
        <item
            android:id="@+id/drawerSettings"
            android:title="@string/settings_page"
            />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/drawerLogin"
                    android:title="@string/login_page"
                    />
            </group>
        </menu>
    </item>

</menu>